--- a/ranges/three-act-website.html
+++ b/ranges/three-act-website.html
@@ -14,10 +14,10 @@
 
             <section id="calculator-input">
                 <form>
-                    <input id="page-count" type="number" name="page-count" min="0">
-                    <label for="page-count">How many pages?</label><br>
-                    <input id="chapter-count" type="number" name="chapter-count" min="0">
-                    <label for="chapter-count">How many parts?</label><br>
+                    <label for="page-count">How many pages?</label>
+                    <input id="page-count" type="number" name="page-count" min=1 max=999999><br>
+                    <label for="chapter-count">How many parts?</label>
+                    <input id="chapter-count" type="number" name="chapter-count" min=1 max=999999><br>
                     <input id="submit" type="button" value="Calculate!" onclick="runCalculator()">
                 </form>
             </section>
@@ -33,13 +33,13 @@
                     </div>
                    
                     <div class="point">
-                        <h3>The Inciting Incident</h3>
+                        <h3>Inciting Incident</h3>
                         <p class="portion" id="pg02">0000</p>
                         <p class="portion" id="ch02">0000</p>
                     </div>
 
                     <div class="point">
-                        <h3>The First Plot Point</h3>
+                        <h3>First Plot Point</h3>
                         <p class="portion" id="pg03">0000</p>
                         <p class="portion" id="ch03">0000</p>
                     </div>
@@ -47,25 +47,25 @@
                 <h2>Act two</h2>
 
                     <div class="point">
-                        <h3>The First Pinch Point</h3>
+                        <h3>First Pinch Point</h3>
                         <p class="portion" id="pg04">0000</p>
                         <p class="portion" id="ch04">0000</p>
                     </div>
 
                     <div class="point">
-                        <h3>The Midpoint</h3>
+                        <h3>Midpoint</h3>
                         <p class="portion" id="pg05">0000</p>
                         <p class="portion" id="ch05">0000</p>
                     </div>
 
                     <div class="point">
-                        <h3>The Second Pinch Point</h3>
+                        <h3>Second Pinch Point</h3>
                         <p class="portion" id="pg06">0000</p>
                         <p class="portion" id="ch06">0000</p>
                     </div>
 
                     <div class="point">
-                        <h3>The Third Plot Point</h3>
+                        <h3>Third Plot Point</h3>
                         <p class="portion" id="pg07">0000</p>
                         <p class="portion" id="ch07">0000</p>
                     </div>
@@ -73,31 +73,31 @@
                 <h2>Act three</h2>
                     
                     <div class="point">
-                        <h3>The Hour of Darkness</h3>
+                        <h3>Hour of Darkness</h3>
                         <p class="portion" id="pg08">0000</p>
                         <p class="portion" id="ch08">0000</p>
                     </div>
 
                     <div class="point">
-                        <h3>The Recovery</h3>
+                        <h3>Recovery</h3>
                         <p class="portion" id="pg09">0000</p>
                         <p class="portion" id="ch09">0000</p>
                     </div>
 
                     <div class="point">
-                        <h3>The Climax</h3>
+                        <h3>Climax</h3>
                         <p class="portion" id="pg10">0000</p>
                         <p class="portion" id="ch10">0000</p>
                     </div>
 
                     <div class="point">
-                        <h3>The Climactic Moment</h3>
+                        <h3>Climactic Moment</h3>
                         <p class="portion" id="pg11">0000</p>
                         <p class="portion" id="ch11">0000</p>
                     </div>
 
                     <div class="point">
-                        <h3>The Resolution</h3>
+                        <h3>Resolution</h3>
                         <p class="portion" id="pg12">0000</p>
                         <p class="portion" id="ch12">0000</p>
                     </div>
